--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,6 +15,18 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
+
+- script: |
+    echo 'Build.DefinitionName=$(Build.DefinitionName)'
+    echo 'Build.BuildId=$(Build.BuildId)'
+    echo 'Build.BuildNumber=$(Build.BuildNumber)'
+    echo 'Pipeline.Workspace=$(Pipeline.Workspace)'
+    echo 'Build.BinariesDirectory=$(Build.BinariesDirectory)'
+    echo 'Build.SourcesDirectory=$(Build.SourcesDirectory)'
+    echo 'Build.BinariesDirectory=$(Build.BinariesDirectory)'
+    echo 'Agent.BuildDirectory=$(Agent.BuildDirectory)'
+  displayName: 'Show Env'
+
 - task: NuGetToolInstaller@1
 
 - task: NuGetCommand@2
