--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -50,6 +50,7 @@ steps:
 - task: PublishBuildArtifacts@1
   inputs:
     #  D:\a\1\s\bin\Release\TestAzureDevOpsConsoleApp.exe
-    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    # 
+    #PathtoPublish: '$(Build.ArtifactStagingDirectory)'
     ArtifactName: 'drop'
     publishLocation: 'Container'
