--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,6 +42,14 @@ steps:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
 
+- task: CopyFiles@2
+  inputs:
+    SourceFolder: '$(Build.SourcesDirectory)\bin\Release'
+    Contents: '**\*.exe'
+    TargetFolder: '$(Build.ArtifactStagingDirectory)'
+    CleanTargetFolder: true
+    OverWrite: true
+
 - task: VSTest@2
   inputs:
     platform: '$(buildPlatform)'
