added visualstudio capability flag to agent

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,10 +14,10 @@ variables:
   buildConfiguration: 'Release'
 
 pool: 
-  # name: SelfHostedPool
-  vmImage: 'windows-latest' 
-  #demands:
-  #  - Agent.Name -equals WICIBuildVM      
+  name: SelfHostedPool
+  #vmImage: 'windows-latest' 
+  demands:
+    - Agent.Name -equals WICIBuildVM      
 
 
 jobs:
