--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,7 +52,7 @@ jobs:
     - task: CopyFiles@2
       inputs:
         SourceFolder: '$(Build.SourcesDirectory)\bin\Release'
-        Contents: '**\*.exe'
+        Contents: '**\*'
         TargetFolder: '$(Build.ArtifactStagingDirectory)'
         CleanTargetFolder: true
         OverWrite: true
