--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -57,7 +57,7 @@ jobs:
         CleanTargetFolder: true
         OverWrite: true
 
-    - script: echo $(Build.BuildNumber) > $(Build.BuildNumber).buildnumber.txt
+    - script: echo $(Build.BuildNumber) > TestAzureDevOpsConsoleApp_$(buildConfiguration).$(Build.BuildNumber).buildnumber.txt
       workingDirectory: $(Build.ArtifactStagingDirectory)
       displayName: Add Version File
 
