--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -49,7 +49,8 @@ jobs:
       inputs:
         solution: '$(solution)'
         platform: '$(buildPlatform)'
-        configuration: '$(buildConfiguration)'
+        #configuration: '$(buildConfiguration)'
+        configuration: $(buildConfig)
 
     - task: CopyFiles@2
       inputs:
